# Try-Your-Luck

./: README.md  main.py  pyproject.toml  tasks.py
.idx/: dev.nix
